--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.volley:dc-volley:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
