--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".login.YourProfileActivity"></activity>
-        <activity android:name=".login.SplashActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".login.ResetPasswordActivity" />
         <activity android:name=".login.SendOtpActivity" />
         <activity android:name=".login.SignupActivity" />
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".login.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
