--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".login.ResetPasswordActivity" />
         <activity android:name=".login.SendOtpActivity" />
         <activity android:name=".login.SignupActivity" />
+        <activity android:name=".login.SendOtpSignupActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.SplashActivity">
             <intent-filter>
